# ChangeLog for dev-php/PEAR-HTML_Template_Sigma
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_Template_Sigma/ChangeLog,v 1.57 2014/01/27 21:37:12 mabi Exp $

*PEAR-HTML_Template_Sigma-1.3.0 (27 Jan 2014)

  27 Jan 2014; Matti Bickel <mabi@gentoo.org>
  +PEAR-HTML_Template_Sigma-1.3.0.ebuild:
  version bump

  09 Feb 2012; Matti Bickel <mabi@gentoo.org>
  -PEAR-HTML_Template_Sigma-1.1.6.ebuild:
  remove old

  07 Feb 2012; Jeroen Roovers <jer@gentoo.org>
  PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild:
  Stable for HPPA (bug #396971).

  01 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
  PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild:
  ppc/ppc64 stable wrt #396971

  29 Jan 2012; Raúl Porcel <armin76@gentoo.org>
  PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild:
  alpha/ia64/sparc stable

  21 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild:
  x86 stable wrt bug #396971

  17 Jan 2012; Agostino Sarubbo <ago@gentoo.org>
  PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild:
  Stable for amd64, wrt bug #396971

*PEAR-HTML_Template_Sigma-1.2.0-r1 (15 Jan 2012)

  15 Jan 2012; Matti Bickel <mabi@gentoo.org>
  -PEAR-HTML_Template_Sigma-1.2.0.ebuild,
  +PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild:
  EAPI bump

*PEAR-HTML_Template_Sigma-1.2.0 (26 Aug 2009)

  26 Aug 2009; Steve Dibb <beandog@gentoo.org>
  +PEAR-HTML_Template_Sigma-1.2.0.ebuild:
  Version bump

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org>
  -PEAR-HTML_Template_Sigma-1.1.4.ebuild,
  PEAR-HTML_Template_Sigma-1.1.6.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-HTML_Template_Sigma-1.1.6.ebuild:
  Fix LICENSE

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-HTML_Template_Sigma-1.1.6.ebuild:
  ia64 stable wrt #192247

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-HTML_Template_Sigma-1.1.6.ebuild:
  alpha/sparc stable wrt #192247
