@@ -4,25 +4,13 @@ Hash: SHA256
 DIST HTML_Template_Sigma-1.2.0.tgz 29040 SHA256 b8b5e9b08b29a13dd317fdf9d121d70020809962a7aacf24d0e0bc06a05e222e SHA512 a76ffb002bb464a957c05387e5bbefa9a6f9436aaa97de0b457d4b6753169eebca35840dce130a0713ac33931ceae6d86194b5b3e94df1583d40b33e47f7a6b7 WHIRLPOOL 0d3bc7171dca35b8792bd9bbc3ea7203e5ae12a9b7a64c9e96828e674d97aad3ea0920cc63e2a0c6ca626fe5ce1cd19d81f32778ad84b8ea5ca5877fd81c5d7e
 DIST HTML_Template_Sigma-1.3.0.tgz 30185 SHA256 24aaf04e84f806a894abbc1fc236e47d7d51c0a5064a67b5f7e29e97c6381a6f SHA512 586068325a3320e2778131c1da98d6179d2385d2d73308b0ea1e8df3e0de23f869e03d74454752631998ef3411d8e8b37feab93c6c7b9f51ae4bedb48155e3ed WHIRLPOOL b102d9de52dfd92a94e037b661869be1e4e94beb5de8ffcf3ea7b167286fa7af74ddbb08504e3592fd595725710ce528f0dce385a7f242af82aabc5fc6ec2b62
 EBUILD PEAR-HTML_Template_Sigma-1.2.0-r1.ebuild 495 SHA256 6c267c14186205cb2e77fe14bcbdd5a763de78460dcf0fc5cacf381b4c06f0c2 SHA512 43a1418329a06d50f58ac767d749ebb9aaa5e5b93a17f4293264d3a0365fac1637d1e72efed85106fdb72d4a01905e8c7f5662dcbdc779e99697b3efb4dd9e5a WHIRLPOOL 6309bcb3f0adf34d6b4f03c0cc4b03c687aa5c98440c650de607b820eaf8b0dcf297072e286037521129ef381c824d3c89fc5af24bb9c40f37ab5e3b2d815793
-EBUILD PEAR-HTML_Template_Sigma-1.3.0.ebuild 501 SHA256 50a43d46b61932c505fe8605eed4b4300bf3e99f79c4dcd4b7ed63d30812a36f SHA512 ea288ff62d2850fb7a14ff557e6fbcaa16f946ab40f2bdca716d99941925091f536dd3383dffb3cd0344387354697ad6775bc1f26d543cad6375c28714a4cb04 WHIRLPOOL b3911fddb9d1bd13268c49650427a50e0c32615dfdacbb31bcddcc8bb00b65b4998a182b124763f8db467de6966f642bbe21ef98bda1a7d1e03c50802b426caa
-MISC ChangeLog 7625 SHA256 a728f0256376ac20271714f36315e2af7df385ff724dbd5ba1d9579646cd0b4d SHA512 a4a6c4f4bfc7502ffd6fa04d65ba495297f200f1282e4ea00593c0e6bafa92092400e91ad5676cb49296fde7737a30ca2e91122cc6aa094026670ca0caf398f0 WHIRLPOOL bd24c0fb0f0630f628cf0e00ce42490d9465ecd934028549e185ff9c8de21daced2d7e4528e70e1eb5259ba3b946919fbd59872756e4358a0310d44c7592c313
+EBUILD PEAR-HTML_Template_Sigma-1.3.0.ebuild 499 SHA256 daa682d55555c8c1d133ce023276bacea3e991d8f8528b0ee6252a643773a4be SHA512 a2215abc038f36f7999d34026827c9bf44f56b7051bc2596c59a19e7adcec81f10adabb4a2e64ad38adb3c6724fcc5205e706fdbbe5d1066798dc74eabb23719 WHIRLPOOL 22161c8f3ec8306b4e2bcce33e7de4848b19681c98dbc4934ecd8cde00dd07759877134be50cb501259d2d12f3f9ab04fc75ec432a538a6d4edc91ba927df8c9
+MISC ChangeLog 7746 SHA256 b05964623edd6aec08d50128d69c7f0c07affd091232340968b9e19291457a08 SHA512 a0180d4875720dd0726762e0e59a971423df3d14862db802fc5faccbdb7f9de98e2d75dd09327df63343e9c9aea20e0b6cf9afce2d8fd1bdc2df0bfb81e1b7f7 WHIRLPOOL 15100388b57d49a3d4c7e4df62e84b73da021eebb9155585ddf313e05a0d081aec908afc0b43a37251ee51cf8275318d22ee4fb25aea1dc905fe21f1486a1af5
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJS5t/GXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRBNzE1M0M4QzQxMzM4REREMjMzQjg4NUZE
-REY5NzFGMTE4RUVBNUU2AAoJEN35cfEY7qXmPNEP/1EoVakKhKAgUsXhLXWhdVZq
-l6yKMb+8UDVHLsB/2NHhLolmvP2QaxVzjPncqSw9r0oico13Z8BKHu7izoAfyocX
-CtDDzbGIqp4tjVxJ4DoQZYv9MUQPrFmMXanFbPKetoWufAp5DkygQaYc+jcyExnD
-ur2+63k3hj+r21zQYBu0EJ04fadvkAFcSbniAofxvwbrzyIQBfgYE7roe2csBCgZ
-Fchu+lp1SX7FByTno02+aTYmWJzs1dK71MPaXAFF5IGyn9EsBhj+l9fv9EQgaHco
-U0TWAvyOKhP6MZrrO6I8PCu5bv4JNKckKfg31a/6yHa5gJUm1yMVHpJW0npSpMIu
-4CSu5auqIbY9AM0mtQfmHCKVS+GEpZfjzImVexfNOYK3y1STc4deW8QBG88vn1LQ
-yq0pZgERFnjqh56n5nWU1MuuoFn/S0QQ4cuOIKwAqUvRFkvQaKM7hd1rEV3Jl8hK
-n+cKmvHqv/cRQ6GYJK6+ZNBGxoXgJPxVqxTUKstPJkD3zT/s6AYW6eXkjj4DayvM
-jMhJVALZpv/ADLbgl1BeqZfAG6EpOAICRq0+rQlm7ZcHjgcSm0OHtmeZBWXPUsZU
-4pwtH+D4RpoAXqI++AY7d81b+W2gOg+Xij+lOvY+43z1vPaVPbvkC7qt0S8hUL7b
-jPGWjSmOpdsQlHMdQS0y
-=k1JN
+iEYEAREIAAYFAlTfKoAACgkQVWmRsqeSphMv7ACfcZt/nZ2aqUbM5Uy04k/FqS4x
+ZMsAn2ojywL6oLX31y3JR1ewjY74kbCE
+=Pu/N
 -----END PGP SIGNATURE-----
