@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTTP_Request2/PEAR-HTTP_Request2-2.2.1.ebuild,v 1.1 2014/01/27 21:46:53 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTTP_Request2/PEAR-HTTP_Request2-2.2.1.ebuild,v 1.2 2015/02/14 11:00:38 jer Exp $
 
 EAPI=5
 
@@ -10,7 +10,7 @@ DESCRIPTION="Provides an easy way to perform HTTP requests"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
 IUSE="+curl +fileinfo +ssl +zlib"
 
 RDEPEND="dev-lang/php[curl?,fileinfo?,ssl?,zlib?]
