@@ -3,10 +3,10 @@ DEPEND=dev-lang/php[ctype] dev-lang/php:* >=dev-php/pear-1.8.1
 DESCRIPTION=An implementation of Integrated Templates API with template 'compilation' added
 EAPI=5
 HOMEPAGE=http://pear.php.net/HTML_Template_Sigma
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=PHP-3.01
 RDEPEND=dev-lang/php:* >=dev-php/pear-1.8.1
 SLOT=0
 SRC_URI=http://pear.php.net/get/HTML_Template_Sigma-1.3.0.tgz
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	php-pear-r1	6199074ba0005674c2291a5a8d0274e2	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=af6d1919b9fbf914a23f30897640e0c2
+_md5_=4ad9e4e3fc578cbdc9fe49da766f164a
