@@ -4,10 +4,10 @@ DESCRIPTION=Provides an easy way to perform HTTP requests
 EAPI=5
 HOMEPAGE=http://pear.php.net/HTTP_Request2
 IUSE=+curl +fileinfo +ssl +zlib
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 LICENSE=BSD
 RDEPEND=dev-lang/php[curl?,fileinfo?,ssl?,zlib?] >=dev-php/PEAR-Net_URL2-2.0.0 dev-lang/php:* >=dev-php/pear-1.8.1
 SLOT=0
 SRC_URI=http://pear.php.net/get/HTTP_Request2-2.2.1.tgz
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	php-pear-r1	6199074ba0005674c2291a5a8d0274e2	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=e7a91de2670fa50f62672613e35d78ff
+_md5_=31a8766aa4c2e5569fea9b183ceeadb4
