@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-HTTP_Request2
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTTP_Request2/ChangeLog,v 1.13 2014/01/27 21:46:53 mabi Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTTP_Request2/ChangeLog,v 1.14 2015/02/14 11:00:38 jer Exp $
+
+  14 Feb 2015; Jeroen Roovers <jer@gentoo.org> PEAR-HTTP_Request2-2.2.1.ebuild:
+  Stable for HPPA (bug #535276).
 
 *PEAR-HTTP_Request2-2.2.1 (27 Jan 2014)
 
