@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-HTML_Template_Sigma
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_Template_Sigma/ChangeLog,v 1.57 2014/01/27 21:37:12 mabi Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_Template_Sigma/ChangeLog,v 1.58 2015/02/14 10:59:10 jer Exp $
+
+  14 Feb 2015; Jeroen Roovers <jer@gentoo.org>
+  PEAR-HTML_Template_Sigma-1.3.0.ebuild:
+  Stable for HPPA (bug #535270).
 
 *PEAR-HTML_Template_Sigma-1.3.0 (27 Jan 2014)
 
